--- a/configs/configUDA.json
+++ b/configs/configUDA.json
@@ -7,7 +7,7 @@
     "num_workers": 1,
     "optimizer": "SGD",
     "momentum": 0.9,
-    "num_iterations": 250000,
+    "num_iterations": 2500000,
     "learning_rate": 2.5e-4,
     "lr_schedule": "Poly",
     "lr_schedule_power": 0.9,
